hazelcast/src/main/java/com/hazelcast/query/parser/SQLParser.java
/* Generated By:JavaCC: Do not edit this line. SQLParser.java */
package com.hazelcast.query.parser;
import com.hazelcast.query.Predicate;
import com.hazelcast.query.Predicates;
import java.io.StringReader;
import java.io.Reader;
import java.util.ArrayList;


public class SQLParser implements SQLParserConstants {
    public SQLParser(String s)
    {
        this((Reader)(new StringReader(s)));
    }

    public static Predicate predicate;
    public Predicate getPredicate()
    {
        return predicate;
    }

    public static void main(String args[]) {
    try {
      new SQLParser(System.in).Lexer();
    }
    catch(ParseException e) {
      System.out.println("Parse fail");
    }
    }

  final public Predicate Lexer() throws ParseException {
    trace_call("Lexer");
    try {
Predicate p;
      label_1:
      while (true) {
        p = expression();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
        case LPAREN:
        case ID:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(0);
  {if (true) return p;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Lexer");
    }
  }

  final public Predicate expression() throws ParseException {
    trace_call("expression");
    try {
Predicate p;
      if (jj_2_1(2147483647)) {
        p = inPredicate();
        System.out.println(p);
        {if (true) return p;}
      } else if (jj_2_2(2147483647)) {
        p = betweenPredicate();
        System.out.println(p);
        {if (true) return p;}
      } else if (jj_2_3(2147483647)) {
        p = andPredicate();
        System.out.println(p);
        {if (true) return p;}
      } else if (jj_2_4(2147483647)) {
        p = orPredicate();
        System.out.println(p);
        {if (true) return p;}
      } else if (jj_2_5(2147483647)) {
        p = notPredicate();
        System.out.println(p);
        {if (true) return p;}
      } else if (jj_2_6(2147483647)) {
        p = notInsidePredicate();
        System.out.println(p);
        {if (true) return p;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
        case ID:
          p = predicate();
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case AND:
            case OR:
              ;
              break;
            default:
              jj_la1[1] = jj_gen;
              break label_2;
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case AND:
              jj_consume_token(AND);
              break;
            case OR:
              jj_consume_token(OR);
              break;
            default:
              jj_la1[2] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            predicate();
          }
              {if (true) return p;}
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("expression");
    }
  }

  final public Predicate andPredicate() throws ParseException {
    trace_call("andPredicate");
    try {
Predicate p1;
Predicate p2;
      p1 = predicate();
      jj_consume_token(AND);
      p2 = predicate();
        {if (true) return new Predicates.AndPredicate(p1,p2);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("andPredicate");
    }
  }

  final public Predicate notPredicate() throws ParseException {
    trace_call("notPredicate");
    try {
Predicate p1;
      jj_consume_token(NOT);
      p1 = predicate();
        {if (true) return new Predicates.NotPredicate(p1);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("notPredicate");
    }
  }

  final public Predicate notInsidePredicate() throws ParseException {
    trace_call("notInsidePredicate");
    try {
Token field;
Predicate p1;
Token value;
ArrayList<Comparable> values;
      field = jj_consume_token(ID);
      jj_consume_token(NOT);
      if (jj_2_7(2147483647)) {
        jj_consume_token(LIKE);
        value = value();
        p1 = new Predicates.LikePredicate(field.image,value.image);
        {if (true) return new Predicates.NotPredicate(p1);}
      } else if (jj_2_8(2147483647)) {
        jj_consume_token(REGEX);
        value = value();
        p1 = new Predicates.RegexPredicate(field.image,value.image);
        {if (true) return new Predicates.NotPredicate(p1);}
      } else if (jj_2_9(2147483647)) {
        jj_consume_token(IN);
        jj_consume_token(LPAREN);
        values = listOfValues();
        jj_consume_token(RPAREN);
        p1 = new Predicates.InPredicate(field.image,values.toArray(new Comparable[values.size()]));
        {if (true) return new Predicates.NotPredicate(p1);}
      } else if (jj_2_10(2147483647)) {
        jj_consume_token(BETWEEN);
     Token value1;Token value2;
        value1 = value();
        jj_consume_token(AND);
        value2 = value();
        p1 = new Predicates.BetweenPredicate(field.image,value1.image,value2.image);
        {if (true) return new Predicates.NotPredicate(p1);}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("notInsidePredicate");
    }
  }

  final public Predicate orPredicate() throws ParseException {
    trace_call("orPredicate");
    try {
Predicate p1;
Predicate p2;
      p1 = predicate();
      jj_consume_token(OR);
      p2 = predicate();
        {if (true) return new Predicates.OrPredicate(p1,p2);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("orPredicate");
    }
  }

  final public Predicate predicate() throws ParseException {
    trace_call("predicate");
    try {
Predicate predicate;
      if (jj_2_11(2147483647)) {
        predicate = equalPredicate();
          {if (true) return predicate;}
      } else if (jj_2_12(2147483647)) {
        predicate = notEqualPredicate();
          {if (true) return predicate;}
      } else if (jj_2_13(2147483647)) {
        predicate = greaterThanPredicate();
          {if (true) return predicate;}
      } else if (jj_2_14(2147483647)) {
        predicate = greaterThanEqualPredicate();
          {if (true) return predicate;}
      } else if (jj_2_15(2147483647)) {
        predicate = lesserThanPredicate();
          {if (true) return predicate;}
      } else if (jj_2_16(2147483647)) {
        predicate = lesserThanEqualPredicate();
          {if (true) return predicate;}
      } else if (jj_2_17(2147483647)) {
        predicate = likePredicate();
          {if (true) return predicate;}
      } else if (jj_2_18(2147483647)) {
        predicate = iLikePredicate();
          {if (true) return predicate;}
      } else if (jj_2_19(2147483647)) {
        predicate = regexPredicate();
          {if (true) return predicate;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
          jj_consume_token(LPAREN);
          predicate = expression();
          jj_consume_token(RPAREN);
         {if (true) return predicate;}
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("predicate");
    }
  }

  final public Predicate equalPredicate() throws ParseException {
    trace_call("equalPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(EQUALS);
      value = value();
    predicate = new Predicates.EqualPredicate(field.image,value.image);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("equalPredicate");
    }
  }

  final public Predicate notEqualPredicate() throws ParseException {
    trace_call("notEqualPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(NOTEQUAL);
      value = value();
    predicate =  new Predicates.NotEqualPredicate(field.image,value.image);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("notEqualPredicate");
    }
  }

  final public Predicate greaterThanPredicate() throws ParseException {
    trace_call("greaterThanPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(GREATER);
      value = value();
    predicate =  new Predicates.GreaterLessPredicate(field.image,value.image,false,false);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("greaterThanPredicate");
    }
  }

  final public Predicate greaterThanEqualPredicate() throws ParseException {
    trace_call("greaterThanEqualPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(GREATER_EQ);
      value = value();
    predicate =  new Predicates.GreaterLessPredicate(field.image,value.image,true,false);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("greaterThanEqualPredicate");
    }
  }

  final public Predicate lesserThanPredicate() throws ParseException {
    trace_call("lesserThanPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(LESSER);
      value = value();
    predicate = new Predicates.GreaterLessPredicate(field.image,value.image,false,true);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lesserThanPredicate");
    }
  }

  final public Predicate lesserThanEqualPredicate() throws ParseException {
    trace_call("lesserThanEqualPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(LESSER_EQ);
      value = value();
    predicate = new Predicates.GreaterLessPredicate(field.image,value.image,true,true);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lesserThanEqualPredicate");
    }
  }

  final public Predicate likePredicate() throws ParseException {
    trace_call("likePredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(LIKE);
      value = value();
    predicate = new Predicates.LikePredicate(field.image,value.image);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("likePredicate");
    }
  }

  final public Predicate iLikePredicate() throws ParseException {
    trace_call("iLikePredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(ILIKE);
      value = value();
    predicate = new Predicates.ILikePredicate(field.image,value.image);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("iLikePredicate");
    }
  }

  final public Predicate inPredicate() throws ParseException {
    trace_call("inPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
 ArrayList<Comparable> values=null;
      field = jj_consume_token(ID);
      jj_consume_token(IN);
      jj_consume_token(LPAREN);
      values = listOfValues();
      jj_consume_token(RPAREN);
    predicate = new Predicates.InPredicate(field.image,values.toArray(new Comparable[values.size()]));
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("inPredicate");
    }
  }

  final public Predicate regexPredicate() throws ParseException {
    trace_call("regexPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value=null;
      field = jj_consume_token(ID);
      jj_consume_token(REGEX);
      value = value();
    predicate = new Predicates.RegexPredicate(field.image,value.image);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("regexPredicate");
    }
  }

  final public Predicate betweenPredicate() throws ParseException {
    trace_call("betweenPredicate");
    try {
 Token field=null;
 Predicate predicate=null;
 Token value1=null;
 Token value2=null;
      field = jj_consume_token(ID);
      jj_consume_token(BETWEEN);
      value1 = value();
      jj_consume_token(AND);
      value2 = value();
    predicate = new Predicates.BetweenPredicate(field.image,value1.image,value2.image);
    {if (true) return predicate;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("betweenPredicate");
    }
  }

  final public ArrayList listOfValues() throws ParseException {
    trace_call("listOfValues");
    try {
ArrayList values = new ArrayList();
Token val = null;
      val = value();
                    values.add(val.image);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 30:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        jj_consume_token(30);
        val = value();
                                                              values.add(val.image);
      }
        {if (true) return values;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("listOfValues");
    }
  }

  final public Token value() throws ParseException {
    trace_call("value");
    try {
Token val;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        val = jj_consume_token(ID);
            {if (true) return val;}
        break;
      case QUOTED_STRING:
        val = jj_consume_token(QUOTED_STRING);
                         val.image=clearQuotes(val.image);{if (true) return val;}
        break;
      case SINGLE_QUOTED_STRING:
        val = jj_consume_token(SINGLE_QUOTED_STRING);
                                val.image=clearQuotes(val.image);{if (true) return val;}
        break;
      case NUM:
        val = jj_consume_token(NUM);
               {if (true) return val;}
        break;
      case FLOAT:
        val = jj_consume_token(FLOAT);
                 {if (true) return val;}
        break;
      case NULL:
        val = jj_consume_token(NULL);
                val.image = null;{if (true) return val;}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("value");
    }
  }

  final public String clearQuotes(String value) throws ParseException {
    trace_call("clearQuotes");
    try {
     {if (true) return value.substring(1,value.length()-1);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("clearQuotes");
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_3R_48() {
    if (jj_scan_token(REGEX)) return true;
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3R_33() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3R_26() {
    if (jj_3R_39()) return true;
    return false;
  }

  private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) {
    jj_scanpos = xsp;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_25() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_33()) {
    jj_scanpos = xsp;
    if (jj_3R_34()) {
    jj_scanpos = xsp;
    if (jj_3R_35()) {
    jj_scanpos = xsp;
    if (jj_3R_36()) {
    jj_scanpos = xsp;
    if (jj_3R_37()) {
    jj_scanpos = xsp;
    if (jj_3R_38()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_19() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(REGEX)) return true;
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(EQUALS)) return true;
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ILIKE)) return true;
    return false;
  }

  private boolean jj_3R_46() {
    if (jj_3R_25()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_51()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_47() {
    if (jj_scan_token(LIKE)) return true;
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LIKE)) return true;
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_24()) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3R_44() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(NOT)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_47()) {
    jj_scanpos = xsp;
    if (jj_3R_48()) {
    jj_scanpos = xsp;
    if (jj_3R_49()) {
    jj_scanpos = xsp;
    if (jj_3R_50()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_3R_23()) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LESSER_EQ)) return true;
    return false;
  }

  private boolean jj_3R_20() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LESSER_EQ)) return true;
    if (jj_3R_25()) return true;
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_3R_22()) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LESSER)) return true;
    return false;
  }

  private boolean jj_3R_11() {
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(GREATER_EQ)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_3R_20()) return true;
    return false;
  }

  private boolean jj_3_13() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(GREATER)) return true;
    return false;
  }

  private boolean jj_3R_43() {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_4()) return true;
    return false;
  }
